--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -356,3 +356,11 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
   position: relative;
 }
+.image-result {
+  width: 400px;
+  height: 400px;
+}
+.image-result img {
+  width: 100%;
+  height: 100%;
+}
