--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -352,7 +352,7 @@ h1, h2, h3, h4, h5, h6 {
 #result {
   width: 100%;
   height: 100vh;
-  background-color: #000000
+  background-color: #000000; 
   background-size: cover;
   position: relative;
 }
@@ -363,4 +363,17 @@ h1, h2, h3, h4, h5, h6 {
 .image-result img {
   width: 100%;
   height: 100%;
+}
+.img-box {
+  padding-top: 25px;
+  width: 350px;
+  height: 420px;
+  border-style: dashed;
+  border-radius: 25px;
+}
+
+.img-box img {
+  border-radius: inherit;
+  width: 90%;
+  height: 80%;
 }
