--- a/templates/index.html
+++ b/templates/index.html
@@ -25,21 +25,17 @@
         <br>
 
         <form action="{{ url_for('result') }}" method="POST" enctype="multipart/form-data">
-            <label for="file" type="btn" class="btn btn-light">Upload</label>
+            <label for="file" type="btn" class="btn-get-started">Upload</label>
             <input id="file" type="file" class="form-control" name="file" hidden onchange="show(event)">
             <br>
             
             <div class="img-box" style="visibility: hidden;">
                 <img id="img" src="" alt="" style="visibility: hidden;">
             </div>
-            <input id="submit-btn" type="submit" class="btn btn-dark" style="visibility: hidden;">
+            <input id="submit-btn" type="submit" class="sub" style="visibility: hidden;">
         </form>
     </div>
 </section>
-
-<main id="main">
-
-</main>
 
 <!-- Vendor JS Files -->
 <script src="static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
