--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,7 +1,8 @@
-
 body {
   font-family: "Open Sans", sans-serif;
+  background: transparent;
 }
+
 
 a {
   color: #e43c5c;
@@ -13,7 +14,12 @@ a:hover {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Nunito", sans-serif;
 }
 
@@ -28,6 +34,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
   position: relative;
 }
+
 #hero:before {
   content: "";
   background: rgba(0, 0, 0, 0.6);
@@ -37,6 +44,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   right: 0;
 }
+
 #hero .hero-container {
   position: absolute;
   bottom: 0;
@@ -50,6 +58,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   padding: 0 15px;
 }
+
 #hero h3 {
   background: rgba(255, 255, 255, 0.1);
   color: #fff;
@@ -58,6 +67,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 30px;
   border-radius: 50px;
 }
+
 #hero h1 {
   margin: 0 0 10px 0;
   font-size: 48px;
@@ -66,11 +76,13 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   color: #fff;
 }
+
 #hero h2 {
   color: #eee;
   margin-bottom: 40px;
   font-size: 24px;
 }
+
 #hero .btn-get-started {
   font-family: "Poppins", sans-serif;
   text-transform: uppercase;
@@ -84,60 +96,55 @@ h1, h2, h3, h4, h5, h6 {
   border: 2px solid #fff;
   color: #fff;
 }
+
 #hero .btn-get-started:hover {
   background: #3ce4c2;
   border: 2px solid #3ce4c2;
 }
+
 @media (min-width: 1024px) {
   #hero {
     background-attachment: fixed;
   }
 }
+
 @media (max-width: 768px) {
   #hero h3 {
     font-size: 22px;
   }
+
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
   }
+
   #hero h2 {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 30px;
   }
 }
+
 @media (max-height: 500px) {
   #hero {
     height: 150vh;
   }
 }
 
-#result {
-  width: 100%;
-  height: 100vh;
-  background-color: #000000; 
-  background-size: cover;
-  position: relative;
-}
-.image-result {
-  width: 400px;
-  height: 400px;
-}
-.image-result img {
-  width: 100%;
-  height: 100%;
-}
 .img-box {
-  padding-top: 25px;
+  margin: auto;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
   width: 350px;
-  height: 420px;
+  height: 380px;
   border-style: dashed;
   border-radius: 25px;
 }
 
 .img-box img {
   border-radius: inherit;
+  margin: auto;
   width: 90%;
   height: 80%;
 }
@@ -161,4 +168,35 @@ h1, h2, h3, h4, h5, h6 {
   background-color: transparent;
   border: 2px solid #fff;
   color: #fff;
+}
+
+
+.block {
+  margin-left: auto;
+}
+
+
+.col-sm {
+  margin-top: 25px;
+}
+
+#color-btn {
+  width: 200px;
+  
+}
+
+.parent-bottom {
+  display: flex;
+}
+
+.bottom {
+  margin: 100px auto;
+}
+
+.buttons {
+  align-items: center;
+  justify-content: center;
+}
+html {
+  background: url(../img/res-bg.jpg);
 }
