--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
           rel="stylesheet">
 
-    <!-- Vendor CSS Files -->
-    <link href="static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="static/assets/css/style.css" rel="stylesheet">
 
 </head>
@@ -38,10 +38,8 @@
 </section>
 
 <!-- Vendor JS Files -->
-<script src="static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="static/assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="static/assets/vendor/swiper/swiper-bundle.min.js"></script>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <script src="static/assets/js/script.js"></script>
 </body>
 
