--- a/templates/result.html
+++ b/templates/result.html
@@ -1,55 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="static/assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-          rel="stylesheet">
-
-
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+        rel="stylesheet">
+    <link href="https://unpkg.com/pattern.css" rel="stylesheet">
     <title>Result</title>
 </head>
+
 <body>
-<div class="box-2">
+    <section id="res">
 
-    <table style="text-align: center; width: 55%; padding: 100px;">
-        <tr>
-            <th>
-                <h1>Result</h1>
-            </th>
-            <th>
-                <h1>RGB</h1>
-            </th>
-        </tr>
-        <tr>
-            <td>
-                <div class="image-result">
-                    <img src="{{ image }}" alt="image"><br>
-                </div>
-            </td>
-
-            <td>
-                {% for color in top_colors %}
-                    <button id="p1" class="btn btn btn-outline" style="background-color:rgb{{ color }}; width: 90%;">
-                        {{ color }}
+    
+    <div class="box-2">
+        <div class="img-box">
+            <img src="{{ image }}" alt="image">
+        </div>
+        <div class="container">
+            <div class="row">
+                {% for n in range(top_colors|length) %}
+                <div class="col-sm">
+                    <input class="color-{{ n }}" type="text" hidden value="{{ top_colors[n] }}">
+                    <button class="btn btn-lg btn-outline" style="background-color: rgb{{top_colors[n]}};" onclick="copy({{n}})">
+                        {{ top_colors[n] }}
                     </button>
-                <br>
-                <br>
+                </div> 
                 {% endfor %}
-            </td>
+                <div class="parent-bottom">
+                    <div class="bottom">
+                        <a href="{{ url_for('home') }}" class="btn btn-warning">Return</a>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
 
-        </tr>
-
-    </table>
-    <br>
-    <br>
-    <a href="{{ url_for('home') }}" class="btn btn-warning">Return</a>
-
-
-</div>
-<script src="static/assets/js/script.js"></script>
+    </div>
+</section>
+    <script src="static/assets/js/script.js"></script>
 </body>
+
 </html>
