Updated some styles

--- a/templates/result.html
+++ b/templates/result.html
@@ -35,7 +35,7 @@
                 {% endfor %}
                 <div class="parent-bottom">
                     <div class="bottom">
-                        <a href="{{ url_for('home') }}" class="btn btn-warning">Return</a>
+                        <a href="{{ url_for('home') }}"><input class="btn btn-dark btn-lg" type="button" value="RETURN"></a>
                     </div>
                 </div>
                 
